# LinuxApplicationDevelopment2023

./: README.md
01_TerminalProject/: Makefile  Show.c  file.txt
02_Multifile/: Makefile  prog.c
03_Text/: README.md  randomize.sh
04_Debugging/: Makefile  range  range.c  script1_gdb  script2_gdb
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c
07_Environmental/: Makefile.am  configure.ac  configure~  rhasher.c  run.sh
08_I18n/: README.md  configure.ac  guesser.pot  guesser_ru.po
09_PatchDiff/: Makefile  maze.c  patch1.diff  patch2.diff  patch3.diff
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: Makefile.am  predict_number.pot  ru.po
11_Documenting/src/: Makefile.am  predict_number.c  predict_number.md.in
